<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomeInput">

    <TextView
        android:id="@+id/category"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="250dp"
        android:text="@string/category"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/category_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/category_input"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="130dp"
        android:ellipsize="end"
        android:hint="@string/category_hint"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/category"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_amount"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/amount"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/category_amount_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/category_amount_input"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="130dp"
        android:gravity="center"
        android:hint="@string/category_amount_hint"
        android:textSize="14sp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/category_amount"
        app:layout_constraintTop_toBottomOf="@id/category_input" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_amount" />
</androidx.constraintlayout.widget.ConstraintLayout>